kubernetes/services/mattermost/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: mattermost
  labels:
    name: mattermost
    pod-security.kubernetes.io/enforce: baseline
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/warn: restricted
